Improved project structure

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -6,11 +6,11 @@
     <title>Pizza</title>
 
     <!-- Own CSS -->
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/index.css" />
 </head>
 
 <body>
-    <script type="text/javascript" src="assets/js/main.js" defer></script>
+    <script type="text/javascript" src="assets/js/index.js" defer></script>
 
     <!--  -->
 </body>
