Finished base header layout

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -23,14 +23,14 @@
                     <!-- Top Info Box Item Wrapper -->
                     <section class="info-box-item top-info">
                         <section class="item-data-wrapper">
-                            <span>{PH text 1}</span>
-                            <span>{PH text 2}</span>
-                            <span>{PH text 3}</span>
+                            <span class="uses-large-rmargin">{PH text 1}</span>
+                            <span class="uses-large-rmargin">{PH text 2}</span>
+                            <span class="uses-large-rmargin">{PH text 3}</span>
                         </section>
-                        <button>Log in</button>
+                        <button>Ввійти</button>
                     </section>
                     
-                    <section class="info-box-item bottom-info uses-top-border">{Bottom info panel placeholder text}</section>
+                    <section class="info-box-item bottom-info uses-tborder">{Bottom info panel placeholder text}</section>
                 </section>
             </header>
             
