Created base side box layout

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -39,7 +39,33 @@
         </section>
         
         <!-- Side Content Box -->
-        <section class="content-box side-box"></section>
+        <section class="content-box side-box">
+            <!-- In-Cart Item Count Section -->
+            <section class="top-element">
+                <!-- Note: use side panel item (Lab2/3) styling here -->
+                <section>Замовлення: 3</section>
+                <section>Очистити замовлення</section>
+            </section>
+
+            <!-- In-Cart Pizza Listing Section -->
+            <section class="side-box-item-wrapper">
+                <section class="item">Pizza 1</section>
+                <section class="item">Pizza 2</section>
+                <section class="item">Pizza 3</section>
+            </section>
+
+            <!-- Total Price/Buy Section -->
+            <section class="bottom-element">
+                <section class="total-price-wrapper">
+                    <span>Сума замовлення</span>
+                    <span>924 грн</span>
+                </section>
+
+                <section class="buy-button-wrapper">
+                    <button class="buy-button">Замовити</button>
+                </section>
+            </section>
+        </section>
     </section>
 </body>
 </html>
