Finished filter styling

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -44,7 +44,26 @@
             </header>
             
             <!-- Main Content Section -->
-            <section class="main-content"></section>
+            <section class="main-content">
+                <!-- Main Filter Label -->
+                <section class="filter-label-wrapper">
+                    <span class="first">Усі піци</span>
+                    <span class="second">8</span>
+                </section>
+
+                <!-- Filter Panel -->
+                <section class="filter-wrapper">
+                    <span class="all">Усі</span>
+                    <span class="meat">М'ясні</span>
+                    <span class="pineapple">З ананасами</span>
+                    <span class="mushroom">З грибами</span>
+                    <span class="seafood">З морепродуктами</span>
+                    <span class="vegetarian">Вега</span>
+                </section>
+
+                <!-- Item Grid -->
+                <section></section>
+            </section>
         </section>
         
         <!-- Side Content Box -->
