Finished page styling & layout for all viewports

--- a/Frontend/www/index.html
+++ b/Frontend/www/index.html
@@ -40,7 +40,10 @@
                         <button class="orange-btn">Ввійти</button>
                     </section>
                     
-                    <section class="info-box-item bottom-info uses-tborder">Піца</section>
+                    <section class="info-box-item bottom-info uses-tborder">
+                        <span>Піца</span>
+                        <button class="orange-btn">Ввійти</button>
+                    </section>
                 </section>
             </header>
             
